public enum WeaponAnimationType
{
    Idle,
    Show,
    Shot,
    Reload,
    Run,
    Scope,
    Granade,
    Idlegrenade,
    HandWeaponHit,
    HandWeaponRun,
    HandWeaponIdle,
    HandWeaponShow,
    PistolShow,
    PistolIdle,
    PistolRun,
    PistolShot,
    PistolScope,
    PistolReload,
    IsReloadPistol,
    IsPistolShot,
    
}